--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "express": "^4.18.2",
     "generator-react-ts-component-dir": "^1.0.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
